Fix color of category select in order to be visible

--- a/app/assets/stylesheets/_components.sass
+++ b/app/assets/stylesheets/_components.sass
@@ -200,6 +200,8 @@ form
       margin-bottom: 1.5em
       input[type='checkbox']
         margin-right: 1rem
+  #post_channel_id
+    color: black
   dl
     dt
       +clearfix
